Styling and Design improvements
Experimenting with bubble-like design with hover effects

--- a/index.html
+++ b/index.html
@@ -3,28 +3,28 @@
 <head>
     <title>Charles Reverand Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" src="css/main.css"/>
+    <link rel="stylesheet" href="css/main.css"/>
 </head>
 <body>
-    <section>
+    <header>
         <h1>Charles Reverand</h1>
         <h2>RPI Class of 2024 // <span>Computer Science</span> and <span>Games and Simulation Arts and Sciences</span></h2>
+    </header>
+    <section id = "about">
+        <p>Hi, I'm Charles. I'm a game/software student with a passion for Game Development. I have experience with multiple game engines and programming languages, including: Unity, Unreal, Godot, Pygame, C#, C++, Python, C, and Java.</p>
     </section>
-    <section>
-        <p>Hi, I'm Charles. I'm a software developer with a passion for Game Development. I have experience with multiple game engines and programming languages, including: Unity, Unreal, Godot, Pygame, C#, C++, Python, C, and Java.</p>
-    </section>
-    <section>
-        <a href="education.html"></a>
+    <section class = "experience">
+        <a class = "workBubble" href="education.html" alt = "Education">
             <div>
                 Education
             </div>
         </a>
-        <a href="projects.html">
+        <a class = "workBubble" href="projects.html" alt = "Personal Projects">
         <div>
             Personal Projects
         </div>
         </a>
-        <a href = "work.html">
+        <a class = "workBubble" href = "work.html" alt = "Work Experience">
         <div>
             Work Experience
         </div>
@@ -34,6 +34,7 @@
         <p>Created by me! 2021</p>
         <div>
             <a href="https://www.github.com/talios0"><img src="#" alt="Charles' Github"/></a>
+            <a href="https://www.itch.io/talios0"><img src="#" alt="Charles' Itch.io"/></a>
             <a href="https://www.twitter.com/talios0"><img src="#" alt="Charles' Twitter"/></a>
             <a href="https://www.linkedin.com/in/charles-reverand-b64694187/"><img src="#" alt="Charles' LinkedIn"/></a>
         </div>
