Adjusted Footer Styling

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     <footer>
         <p>Created by me! 2021</p>
         <div>
-            <a href="https://www.github.com/talios0"><img src="#" alt="Charles' Github"/></a>
-            <a href="https://www.itch.io/talios0"><img src="#" alt="Charles' Itch.io"/></a>
-            <a href="https://www.twitter.com/talios0"><img src="#" alt="Charles' Twitter"/></a>
-            <a href="https://www.linkedin.com/in/charles-reverand-b64694187/"><img src="#" alt="Charles' LinkedIn"/></a>
+            <a href="https://www.github.com/talios0"><img src="/img/GitHub-Mark-Light-120px-plus.png" alt="Charles' Github"/></a>
+            <a href="https://www.itch.io/talios0"><img src="/img/itchio-textless-white.svg" alt="Charles' Itch.io"/></a>
+            <a href="https://www.twitter.com/talios0"><img src="/img/2021 Twitter logo - white.png" alt="Charles' Twitter"/></a>
+            <a href="https://www.linkedin.com/in/charles-reverand-b64694187/"><img src="/img/LI-In-Bug.png" alt="Charles' LinkedIn"/></a>
         </div>
     </footer>
 </body>
