Added Contact Form

--- a/index.html
+++ b/index.html
@@ -30,6 +30,17 @@
         </div>
         </a>
     </section>
+    <section class = "contact">
+        <h2>Contact Me</h2>
+        <form action="mailto:charlesreverand.01@gmail.com" method="POST" enctype="multipart/form-data" name="Email Form">
+            <div>
+                <label>Name<input type="text" name="name" required></label>
+                <label>Email<input type="email" name="email" required></label>
+            </div>
+            <label>Message<textarea name="contents" required></textarea></label>
+            <input class="submit" type="submit" value="Send"/>
+        </form>
+    </section>
     <footer>
         <p>Created by me! 2021</p>
         <div>
