--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <title>Charles Reverand Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/main.css"/>
+    <link rel="stylesheet" href="/css/main.css"/>
+    <link rel="stylesheet" href="/css/halfScreen.css"/>
 </head>
 <body>
     <header>
