--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/main.css"/>
     <link rel="stylesheet" href="/css/halfScreen.css"/>
+    <link rel="stylesheet" href="/css/mobile.css"/>
 </head>
 <body>
     <header>
