--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <p>Created by me! 2021</p>
         <div>
             <a href="https://www.github.com/talios0"><img src="/img/GitHub-Mark-Light-120px-plus.png" alt="Charles' Github"/></a>
-            <a href="https://www.itch.io/talios0"><img src="/img/itchio-textless-white.svg" alt="Charles' Itch.io"/></a>
+            <a href="https://talios0.itch.io"><img src="/img/itchio-textless-white.svg" alt="Charles' Itch.io"/></a>
             <a href="https://www.twitter.com/talios0"><img src="/img/2021 Twitter logo - white.png" alt="Charles' Twitter"/></a>
             <a href="https://www.linkedin.com/in/charles-reverand-b64694187/"><img src="/img/LI-In-Bug.png" alt="Charles' LinkedIn"/></a>
         </div>
