--- a/education.html
+++ b/education.html
@@ -12,6 +12,28 @@
         <h1>Charles Reverand</h1>
         <h2>RPI Class of 2024 // <span>Computer Science</span> and <span>Games and Simulation Arts and Sciences</span></h2>
     </header>
+    <section class = "experienceSmall">
+        <a class = "homeBubble" href="index.html" alt = "Home">
+            <p>
+                Home
+            </p>
+        </a>
+        <a class = "workBubble" href="education.html" alt = "Education">
+            <p>
+                Education
+            </p>
+        </a>
+        <a class = "workBubble" href="projects.html" alt = "Personal Projects">
+        <p>
+            Personal Projects
+        </p>
+        </a>
+        <a class = "workBubble" href = "work.html" alt = "Work Experience">
+        <p>
+            Work Experience
+        </p>
+        </a>
+    </section>
     <section id = "about">
         <p>I currently attend Rennselaer Polytechnic Institute as a Computer Science (CSCI) major with a dual major in Games and Simulation Arts and Sciences (GSAS). As of Spring 2022, I am a Sophmore by year and a Junior by credits.</p>
     </section>
@@ -46,9 +68,6 @@
                     </div>
                     <div>
                         <p>Game Development I (GSAS-4520)</p>
-                        <div class = "carousel" id ="gamedev1">
-                            <img src="gamedev1/0.png" alt = "Projects created for Game Development I"/>
-                        </div>
                     </div>
                     <div>
                         <p>Intro to Game Design (GSAS-1200)</p>
