--- a/projects.html
+++ b/projects.html
@@ -12,6 +12,28 @@
         <h1>Charles Reverand</h1>
         <h2>RPI Class of 2024 // <span>Computer Science</span> and <span>Games and Simulation Arts and Sciences</span></h2>
     </header>
+    <section class = "experienceSmall">
+        <a class = "homeBubble" href="index.html" alt = "Home">
+            <p>
+                Home
+            </p>
+        </a>
+        <a class = "workBubble" href="education.html" alt = "Education">
+            <p>
+                Education
+            </p>
+        </a>
+        <a class = "workBubble" href="projects.html" alt = "Personal Projects">
+        <p>
+            Personal Projects
+        </p>
+        </a>
+        <a class = "workBubble" href = "work.html" alt = "Work Experience">
+        <p>
+            Work Experience
+        </p>
+        </a>
+    </section>
     <section id = "about">
         <p>I always try to expand and stay proactive with my skillset by taking on various personal projects/competitions. Here are some of them!</p>
     </section>
