--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h2>RPI Class of 2024 // <span>Computer Science</span> and <span>Games and Simulation Arts and Sciences</span></h2>
     </header>
     <section id = "about">
-        <p>Hi, I'm Charles. I'm a game/software student with a passion for Game Development. I have experience with multiple game engines and programming languages, including: Unity, Unreal, Godot, Pygame, C#, C++, Python, C, and Java.</p>
+        <p>Hi, I'm Charles. I'm a game/software student with a passion for Game Development. I have experience with multiple game engines, programming languages, and technologies including: Unity, Unreal (UE4), Godot, Pygame, C#, C++, Python, C, NodeJS, AngularJS, HTML/SASS/CSS/SCSS, Adobe XD, and Java.</p>
     </section>
     <section class = "experience">
         <a class = "workBubble" href="education.html" alt = "Education">
