--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/css/main.css"/>
     <link rel="stylesheet" href="/css/halfScreen.css"/>
     <link rel="stylesheet" href="/css/mobile.css"/>
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 </head>
 <body>
     <header>
@@ -39,7 +40,7 @@
     </section>
     <section class = "projects">
         <div class="inprogress">
-            <h3>Catan-like Game in Discord</h3>
+            <h3>Catan-like Discord Game</h3>
             <div>
                 <div class="description">
                     <p>A project that sees the game of Catan played directly through a Discord server's chat room. It is designed to work with multiple games concurrently and saves progress to ensure games can be returned to.</p>
@@ -50,7 +51,12 @@
                     </ul>
                 </div>
                 <div class = "carousel" id = "catan">
-                    <img src = "/img/catan/0.png" alt="Images of a work in progress version of the Catan in Discord project."/>
+                    <div><img src = "/img/catan/0.png" alt="Images of a work in progress version of the Catan in Discord project."/></div>
+                    <div><img src = "/img/catan/1.png" alt="Images of a work in progress version of the Catan in Discord project."/></div>
+                    <div><img src = "/img/catan/2.png" alt="Images of a work in progress version of the Catan in Discord project."/></div>
+                    <div><img src = "/img/catan/3.png" alt="Images of a work in progress version of the Catan in Discord project."/></div>
+                    <div><img src = "/img/catan/4.png" alt="Images of a work in progress version of the Catan in Discord project."/></div>
+                    <div><img src = "/img/catan/5.png" alt="Images of a work in progress version of the Catan in Discord project."/></div>
                 </div>
             </div>
         </div>
@@ -68,7 +74,11 @@
                     </ul>
                 </div>
                 <div class = "carousel" id = "snowman">
-                    <img src = "/img/snowman/0.png" alt="Images of the Christmas of the Snowmen game."/>
+                    <div><img src = "/img/snowman/0.png" alt="Images of the Christmas of the Snowmen game."/></div>
+                    <div><img src = "/img/snowman/1.png" alt="Images of the Christmas of the Snowmen game."/></div>
+                    <div><img src = "/img/snowman/2.png" alt="Images of the Christmas of the Snowmen game."/></div>
+                    <div><img src = "/img/snowman/3.png" alt="Images of the Christmas of the Snowmen game."/></div>
+                    <div><img src = "/img/snowman/4.png" alt="Images of the Christmas of the Snowmen game."/></div>
                 </div>
                 <iframe src="https://itch.io/embed/1330257?dark=true" width="208" height="167" frameborder="0"><a href="https://talios0.itch.io/christmas-of-the-snowmen">Christmas of the Snowmen by talios0, Saber333</a></iframe>
             </div>
@@ -87,7 +97,10 @@
                 </ul>
             </div>
             <div class = "carousel" id = "hotc">
-                <img src = "/img/hotc/0.png" alt="Images of the Heart of the Cards game."/>
+                <div><img src = "/img/hotc/0.png" alt="Images of the Heart of the Cards game."/></div>
+                <div><img src = "/img/hotc/1.png" alt="Images of the Heart of the Cards game."/></div>
+                <div><img src = "/img/hotc/2.png" alt="Images of the Heart of the Cards game."/></div>
+                <div><img src = "/img/hotc/3.png" alt="Images of the Heart of the Cards game."/></div>
             </div>
             <iframe src="https://itch.io/embed/1071022?dark=true" width="208" height="167" frameborder="0"><a href="https://talios0.itch.io/heart-of-the-cards">Heart of the Cards by talios0, Saber333, LawrenceOny, stytchys</a></iframe>
             </div>
@@ -104,7 +117,12 @@
                 </ul>
             </div>
             <div class = "carousel" id = "puyojs">
-                <img src = "/img/puyojs/0.png" alt="Images of the PuyoJS game."/>
+                <div><img src = "/img/puyojs/0.png" alt="Images of the PuyoJS game."/></div>
+                <div><img src = "/img/puyojs/1.png" alt="Images of the PuyoJS game."/></div>
+                <div><img src = "/img/puyojs/2.png" alt="Images of the PuyoJS game."/></div>
+                <div><img src = "/img/puyojs/3.png" alt="Images of the PuyoJS game."/></div>
+                <div><img src = "/img/puyojs/4.png" alt="Images of the PuyoJS game."/></div>
+                <div><img src = "/img/puyojs/5.png" alt="Images of the PuyoJS game."/></div>
             </div>
             <iframe src="https://itch.io/embed/449013?dark=true" width="208" height="167" frameborder="0"><a href="https://talios0.itch.io/puyojs">PuyoJS by talios0</a></iframe>
         </div>
@@ -163,5 +181,8 @@
             <a href="https://www.linkedin.com/in/charles-reverand-b64694187/"><img src="/img/LI-In-Bug.png" alt="Charles' LinkedIn"/></a>
         </div>
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script type="text/javascript" src="./js/carousel.js"></script>
 </body>
 </html>
