--- a/education.html
+++ b/education.html
@@ -3,7 +3,8 @@
 <head>
     <title>Charles Reverand's Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/css/main.css"/>
+    <link rel="stylesheet" href="/css/fonts.css"/>
+    <link rel="stylesheet" href="/css/main-old.css"/>
     <link rel="stylesheet" href="/css/halfScreen.css"/>
     <link rel="stylesheet" href="/css/mobile.css"/>
 </head>
