--- a/index.html
+++ b/index.html
@@ -3,54 +3,34 @@
 <head>
     <title>Charles Reverand's Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/css/fonts.css"/>
     <link rel="stylesheet" href="/css/main.css"/>
-    <link rel="stylesheet" href="/css/halfScreen.css"/>
-    <link rel="stylesheet" href="/css/mobile.css"/>
 </head>
 <body>
-    <header>
-        <h1>Charles Reverand</h1>
-        <h2>RPI Class of 2024 // <span>Computer Science</span> and <span>Games and Simulation Arts and Sciences</span></h2>
-    </header>
-    <section id = "about">
-        <p>Hi, I'm Charles. I'm a game/software student with a passion for Game Development. I have experience with multiple game engines, programming languages, and technologies including: Unity, Unreal (UE4), Godot, Pygame, C#, C++, Python, C, NodeJS, AngularJS, HTML/SASS/CSS/SCSS, Adobe XD, and Java.</p>
-    </section>
-    <section class = "experience">
-        <a class = "workBubble" href="education.html" alt = "Education">
+<div class = "fullPage">
+    <div class = "links">
+        <a href="https://www.github.com/talios0"><img src="/img/GitHub-Mark-Light-120px-plus.png" alt="Charles' Github"/></a>
+        <a href="https://talios0.itch.io"><img src="/img/itchio-textless-white.svg" alt="Charles' Itch.io"/></a>
+        <a href="https://www.twitter.com/talios0"><img src="/img/2021 Twitter logo - white.png" alt="Charles' Twitter"/></a>
+        <a href="https://www.linkedin.com/in/charles-reverand-b64694187/"><img src="/img/LI-In-Bug.png" alt="Charles' LinkedIn"/></a>
+    </div>
+    <div class = "about">
+        <div class = "name">
+            <h1>Charles Reverand</h1>
+            <span>RPI '24 Computer Science and Games and Simulation Arts and Sciences</span>
+        </div>
+        <div class = "info">
+            <img src="img/temp.jpg"/>
             <div>
-                Education
+                Hiya! I'm a current junior Computer Science student, dual majoring in GSAS, with a passion for game development.
             </div>
-        </a>
-        <a class = "workBubble" href="projects.html" alt = "Personal Projects">
-        <div>
-            Personal Projects
         </div>
-        </a>
-        <a class = "workBubble" href = "work.html" alt = "Work Experience">
-        <div>
-            Work Experience
-        </div>
-        </a>
-    </section>
-    <section class = "contact">
-        <h2>Contact Me</h2>
-        <form action="mailto:charlesreverand.01@gmail.com" method="POST" enctype="multipart/form-data" name="Email Form">
-            <div>
-                <label>Name<input type="text" name="name" required></label>
-                <label>Email<input type="email" name="email" required></label>
-            </div>
-            <label>Message<textarea name="contents" required></textarea></label>
-            <input class="submit" type="submit" value="Send"/>
-        </form>
-    </section>
-    <footer>
-        <p>Created by me! 2021</p>
-        <div>
-            <a href="https://www.github.com/talios0"><img src="/img/GitHub-Mark-Light-120px-plus.png" alt="Charles' Github"/></a>
-            <a href="https://talios0.itch.io"><img src="/img/itchio-textless-white.svg" alt="Charles' Itch.io"/></a>
-            <a href="https://www.twitter.com/talios0"><img src="/img/2021 Twitter logo - white.png" alt="Charles' Twitter"/></a>
-            <a href="https://www.linkedin.com/in/charles-reverand-b64694187/"><img src="/img/LI-In-Bug.png" alt="Charles' LinkedIn"/></a>
-        </div>
-    </footer>
+    </div>
+    <nav>
+        <a class = "button" href="projects.html"><div>Projects</div></a>
+        <a class = "button" href="work.html"><div>Work</div></a>
+        <a class = "button" href="education.html"><div>Education</div></a>
+    </nav>
+</div>
 </body>
 </html>
