--- a/projects.html
+++ b/projects.html
@@ -3,186 +3,145 @@
 <head>
     <title>Charles Reverand's Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/css/fonts.css"/>
     <link rel="stylesheet" href="/css/main.css"/>
-    <link rel="stylesheet" href="/css/halfScreen.css"/>
-    <link rel="stylesheet" href="/css/mobile.css"/>
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 </head>
-<body>
-    <header>
-        <h1>Charles Reverand</h1>
-        <h2>RPI Class of 2024 // <span>Computer Science</span> and <span>Games and Simulation Arts and Sciences</span></h2>
-    </header>
-    <section class = "experienceSmall">
-        <a class = "homeBubble" href="index.html" alt = "Home">
-            <p>
-                Home
-            </p>
-        </a>
-        <a class = "workBubble" href="education.html" alt = "Education">
-            <p>
-                Education
-            </p>
-        </a>
-        <a class = "workBubble" href="projects.html" alt = "Personal Projects">
-        <p>
-            Personal Projects
-        </p>
-        </a>
-        <a class = "workBubble" href = "work.html" alt = "Work Experience">
-        <p>
-            Work Experience
-        </p>
-        </a>
-    </section>
-    <section id = "about">
-        <p>I always try to expand and stay proactive with my skillset by taking on various personal projects/competitions. Here are some of them!</p>
-    </section>
-    <section class = "projects">
-        <div class="inprogress">
-            <h3>Catan-like Discord Game</h3>
-            <div>
-                <div class="description">
-                    <p>A project that sees the game of Catan played directly through a Discord server's chat room. It is designed to work with multiple games concurrently and saves progress to ensure games can be returned to.</p>
-                    <ul>
-                        <li>Main Technologies: Discord.JS, NodeJS, MongoDB</li>
-                        <li>Repo Link: Closed Source</li>
-                        <li>Estimated Progress: 68%</li>
-                    </ul>
-                </div>
-                <div class = "carousel" id = "catan">
-                    <div><img src = "/img/catan/0.png" alt="Images of a work in progress version of the Catan in Discord project."/></div>
-                    <div><img src = "/img/catan/1.png" alt="Images of a work in progress version of the Catan in Discord project."/></div>
-                    <div><img src = "/img/catan/2.png" alt="Images of a work in progress version of the Catan in Discord project."/></div>
-                    <div><img src = "/img/catan/3.png" alt="Images of a work in progress version of the Catan in Discord project."/></div>
-                    <div><img src = "/img/catan/4.png" alt="Images of a work in progress version of the Catan in Discord project."/></div>
-                    <div><img src = "/img/catan/5.png" alt="Images of a work in progress version of the Catan in Discord project."/></div>
-                </div>
-            </div>
+<body class = "darkBG">
+<div class = "halfPage">
+    <div class = "links">
+        <a href="https://www.github.com/talios0"><img src="/img/GitHub-Mark-Light-120px-plus.png" alt="Charles' Github"/></a>
+        <a href="https://talios0.itch.io"><img src="/img/itchio-textless-white.svg" alt="Charles' Itch.io"/></a>
+        <a href="https://www.twitter.com/talios0"><img src="/img/2021 Twitter logo - white.png" alt="Charles' Twitter"/></a>
+        <a href="https://www.linkedin.com/in/charles-reverand-b64694187/"><img src="/img/LI-In-Bug.png" alt="Charles' LinkedIn"/></a>
+    </div>
+    <div class = "aboutMin">
+        <div class = "name">
+            <h1>Projects</h1>
         </div>
-        <div>
-            <h3>Christmas of the Snowmen</h3>
-            <div>
-                <div class = "description">
-                    <p>A game created for the Jame Gam Christmas Edition Game Jam in 1.5 days. I created the intial concept, programming, and art, while Sabastian Fernandes (credited on the Itch.Io) created the music.</p>
-                    <ul>
-                        <li>December 2021</li>
-                        <li>Main Technologies: Unity3D, C#, Aseprite</li>
-                        <li><a href="https://github.com/talios0/SantaSnowman" alt = "Go to Christmas of the Snowmen Repo">Repo Link</a></li>
-                        <li>Overall Ranking: 22/81</li>
-                        <li>Theme Ranking: 9/81</li>
-                    </ul>
-                </div>
-                <div class = "carousel" id = "snowman">
-                    <div><img src = "/img/snowman/0.png" alt="Images of the Christmas of the Snowmen game."/></div>
-                    <div><img src = "/img/snowman/1.png" alt="Images of the Christmas of the Snowmen game."/></div>
-                    <div><img src = "/img/snowman/2.png" alt="Images of the Christmas of the Snowmen game."/></div>
-                    <div><img src = "/img/snowman/3.png" alt="Images of the Christmas of the Snowmen game."/></div>
-                    <div><img src = "/img/snowman/4.png" alt="Images of the Christmas of the Snowmen game."/></div>
-                </div>
-                <iframe src="https://itch.io/embed/1330257?dark=true" width="208" height="167" frameborder="0"><a href="https://talios0.itch.io/christmas-of-the-snowmen">Christmas of the Snowmen by talios0, Saber333</a></iframe>
-            </div>
-        </div>
-        <div>
-            <h3>Heart of the Cards</h3>
-            <div>
-            <div class="description">
-                <p>A game created for the So Bad It's Good Game Jam with 3 others. I was the project leader and primary programmer for the game, handling the drawing, accuracy calculations, etc.</p>
-                <ul>
-                    <li>Summer 2021</li>
-                    <li>Main Technologies: Unity3D, C#</li>
-                    <li>Repo Link: Closed Source</li>
-                    <li>Overall: 18/40</li>
-                    <li>Overall Good: 8/40</li>
-                </ul>
-            </div>
-            <div class = "carousel" id = "hotc">
-                <div><img src = "/img/hotc/0.png" alt="Images of the Heart of the Cards game."/></div>
-                <div><img src = "/img/hotc/1.png" alt="Images of the Heart of the Cards game."/></div>
-                <div><img src = "/img/hotc/2.png" alt="Images of the Heart of the Cards game."/></div>
-                <div><img src = "/img/hotc/3.png" alt="Images of the Heart of the Cards game."/></div>
-            </div>
-            <iframe src="https://itch.io/embed/1071022?dark=true" width="208" height="167" frameborder="0"><a href="https://talios0.itch.io/heart-of-the-cards">Heart of the Cards by talios0, Saber333, LawrenceOny, stytchys</a></iframe>
-            </div>
-        </div>
-        <div>
-            <h3>PuyoJS</h3>
-            <div>
-            <div class="description">
-                <p>The classic game of PuyoPuyo recreated in JavaScript! This game is one of my first tests with P5JS and has a few rough patches. The collision and nearby Puyo detection were an interesting challenges because they required me to think of it from a grid-based mindset instead of the more open methods common in game engines, such as Unity3D.</p>
-                <ul>
-                    <li>Spring/Summer 2019</li>
-                    <li>Main Technologies: P5JS, JS, Adobe Illustrator</li>
-                    <li><a href="https://github.com/talios0/PuyoJS" alt = "Go to PuyoJS Repo">Repo Link</a></li>
-                </ul>
-            </div>
-            <div class = "carousel" id = "puyojs">
-                <div><img src = "/img/puyojs/0.png" alt="Images of the PuyoJS game."/></div>
-                <div><img src = "/img/puyojs/1.png" alt="Images of the PuyoJS game."/></div>
-                <div><img src = "/img/puyojs/2.png" alt="Images of the PuyoJS game."/></div>
-                <div><img src = "/img/puyojs/3.png" alt="Images of the PuyoJS game."/></div>
-                <div><img src = "/img/puyojs/4.png" alt="Images of the PuyoJS game."/></div>
-                <div><img src = "/img/puyojs/5.png" alt="Images of the PuyoJS game."/></div>
-            </div>
-            <iframe src="https://itch.io/embed/449013?dark=true" width="208" height="167" frameborder="0"><a href="https://talios0.itch.io/puyojs">PuyoJS by talios0</a></iframe>
-        </div>
-        </div>
-        <div>
-            <h3>Form2Role Bot</h3>
-            <div>
-            <div class="description">
-                <p>A Discord bot created to assign roles to students in a school Discord Server. The idea was that students would fill out a Google Form, then the bot would automatically assign them those roles so that each student had access to text channels for those classes. This would make it easy for them to ask questions and connect with others in the class.</p>
-                <ul>
-                    <li>Main Technologies: Discord.NET, C#, Google Sheets API</li>
-                    <li>Originally Created for the Congressional App Challenge in Fall 2018</li> 
-                    <li><a href="https://github.com/talios0/Form2RoleBot" alt = "Go to Form2Role Bot Repo">Repo Link</a></li>
-                </ul>
-            </div>
-        </div>
-        </div>
-        <div>
-            <h3>Bus Occupancy Tracker Prototype</h3>
-            <div>
-            <div class="description">
-                <p>Created for the HackRPI pre-hackathon event (Fall 2020) in a few hours. The demo featured the ability to see a bus, the number of current occupants, the next stop, and current restrictions. This prototype placed 2nd in their pre-hackathon event, which took place a few months before HackRPI.</p>
-                <ul>
-                    <li>Main Technologies: AngularJS</li>
-                    <li><a href="https://github.com/talios0/HackRPI-Bus-Occupancy-Tracker-Demo" alt = "Go to Bus Occupany Tracker Repo">Repo Link</a></li>
-                </ul>
-            </div>
-        </div>
-        </div>
-        </section>
-        <h2 id="plus">Other // Old</h2>
-        <section class="projects">
-        <div>
-            <h3>Ludum Dare 46</h3>
-            <p>April 2020</p>
-        </div>
-        <div>
-            <h3>Ludum Dare 43</h3>
-            <p>December 2018</p>
-        </div>
-        <div>
-            <h3>Ludum Dare 40</h3>
-            <p>December 2017</p>
-        </div>
-        <div>
-            <h3>HackBCA Hackathon</h3>
-            <p>March 2017</p>
-        </div>
-    </section>
-    <footer>
-        <p>Created by me! 2021</p>
-        <div>
-            <a href="https://www.github.com/talios0"><img src="/img/GitHub-Mark-Light-120px-plus.png" alt="Charles' Github"/></a>
-            <a href="https://talios0.itch.io"><img src="/img/itchio-textless-white.svg" alt="Charles' Itch.io"/></a>
-            <a href="https://www.twitter.com/talios0"><img src="/img/2021 Twitter logo - white.png" alt="Charles' Twitter"/></a>
-            <a href="https://www.linkedin.com/in/charles-reverand-b64694187/"><img src="/img/LI-In-Bug.png" alt="Charles' LinkedIn"/></a>
-        </div>
-    </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script type="text/javascript" src="./js/carousel.js"></script>
+    </div>
+    <nav>
+        <a class = "button" href="index.html"><div>Home</div></a>
+        <a class = "button" href="projects.html"><div>Projects</div></a>
+        <a class = "button" href="work.html"><div>Work</div></a>
+        <a class = "button" href="education.html"><div>Education</div></a>
+    </nav>
+</div>
+<div class = "projects">
+    <div class = "item">
+        <span class = "itemTitle">Wrathskeller</span>
+        <span class="itemTime">Winter & Spring 2022</span>
+        <p class = "itemDetail">An RCOS project where irl user-created characters are pitted in an RPI-themed fighting game with major-specific traits!</p>
+        <ul>
+            <li>Godot</li>
+            <li>View on GitHub</li>
+        </ul>
+    </div>
+    <div class = "item">
+        <span class = "itemTitle">Wrathspriter</span>
+        <span class="itemTime">Winter & Spring 2022</span>
+        <p class = "itemDetail">An RCOS project that handles the creation and sending of user-created characters to Wrathspriter through the use of a progressive web app.</p>
+        <ul>
+            <li>NodeJS, ReactJS, TypeScript</li>
+            <li>View on GitHub</li>
+        </ul>
+    </div>
+    <div class = "item">
+        <span class = "itemTitle">Anime Schedule</span>
+        <span class="itemTime">February 2022 - Present</span>
+        <p class = "itemDetail">Shows the release dates for English-dubbed anime in a graphical format. Utilizes the TeamUP REST and AniList APIs.</p>
+        <ul>
+            <li>NodeJS, Express, JS</li>
+            <li>View on GitHub</li>
+        </ul>
+        <a class = "button" href = "https://talios.software">Go to Site</a>
+    </div>
+    <div class = "item">
+        <span class = "itemTitle">Catan-Like Discord Game</span>
+        <span class="itemTime">Summer 2021 - Present</span>
+        <p class = "itemDetail">A WIP Discord Bot that recreates Catan, playable directly through a Discord Server's chat room. Keeps track of game progess and allow multiple concurrent games.</p>
+        <ul>
+            <li>Discord.JS, NodeJS, MongoDB, JS</li>
+            <li>Estimated Progress: 72%</li>
+        </ul>
+        <img src = "img/catan/0.png"/>
+    </div>
+    <div class = "item">
+        <span class = "itemTitle">Christmas of the Snowmen</span>
+        <span class = "itemTime">December 2021</span>
+        <p class = "itemDetail">Programmer, Designer, and Artist for this game about a Christmas Tree saving Christmas for the Jame Gam Christmas Edition in 1.5 days.</p>
+        <ul>
+            <li>Unity3D, C#, Aseprite</li>
+            <li>Overall Ranking: 22/81</li>
+            <li>Theme Ranking: 9/81</li>
+        </ul>
+        <img src = "img/snowman/0.png"/>
+        <a class = "button" href = "https://talios0.itch.io/christmas-of-the-snowmen">Play on Itch.io</a>
+    </div>
+    <div class = "item">
+        <span class = "itemTitle">Heart of the Cards</span>
+        <span class = "itemTime">Summer 2021</span>
+        <p class = "itemDetail">Created for the So Bad It's Good Game Jame with 3 others. I was the project leader and primary programmer.</p>
+        <ul>
+            <li>Unity3D, C#</li>
+            <li>Overall Ranking: 18/40</li>
+            <li>Overall Good: 8/40</li>
+        </ul>
+        <img src = "img/hotc/0.png"/>
+        <a class = "button" href = "https://talios0.itch.io/heart-of-the-cards">Play on Itch.io</a>
+    </div>
+    <div class = "item">
+        <span class = "itemTitle">Bus Occupancy Tracker Demo</span>
+        <span class = "itemTime">Fall 2019</span>
+        <p class = "itemDetail">Made for the HackRPI pre-hackathon event in a few hours. Featured the ability to see a bus, it's occupants, the next stop, and current restrictions.</p>
+        <ul>
+            <li>AngularJS</li>
+            <li>Placement: 2</li>
+            <li>View on GitHub</li>
+        </ul>
+    </div>
+    <div class = "item">
+        <span class = "itemTitle">PuyoJS</span>
+        <span class = "itemTime">Summer 2019</span>
+        <p class = "itemDetail">A recreation of the classic game of Puyo Puyo!</p>
+        <ul>
+            <li>P5JS, JS, Adobe Illustrator</li>
+            <li>View on GitHub</li>
+        </ul>
+        <img src = "img/puyojs/0.png"/>
+        <a class = "button" href = "https://talios0.itch.io/puyojs">Play on Itch.io</a>
+    </div>
+    <div class = "item">
+        <span class = "itemTitle">Form2Role Bot</span>
+        <span class = "itemTime">Fall 2018</span>
+        <p class = "itemDetail">Originally made for the Congressional App Challenge, Form2Role Bot is a Discord Bot that assigns roles based off of a Google Form submission. Originally created for my high school's Discord server to make it easy to talk to others in the same class.</p>
+        <ul>
+            <li>Discord.NET, C#, Google Sheets API</li>
+            <li>View on Github</li>
+        </ul>
+    </div>
+    <div class = "item">
+        <span class = "itemTitle">Laser Evaders</span>
+        <span class = "itemTime">April 2020</span>
+        <p class = "itemDetail">Created for Ludum Dare 46 in three days. Manipulate the entire level to get a ball to the objective.</p>
+        <ul>
+            <li>Unity3D, C#</li>
+            <li>View on GitHub</li>
+        </ul>
+        <img src = "img/laser/0.png"/>
+        <a class = "button" href = "https://talios0.itch.io/laser-evaders">Play on Itch.io</a>
+    </div>
+    <div class = "item">
+        <span class = "itemTitle">Ludum Dare 43</span>
+        <span class = "itemTime">December 2018</span>
+    </div>
+    <div class = "item">
+        <span class = "itemTitle">Ludum Dare 40</span>
+        <span class = "itemTime">December 2017</span>
+    </div>
+    <div class = "item">
+        <span class = "itemTitle">HackBCA Hackathon</span>
+        <span class = "itemTime">March 2017</span>
+    </div>
+</div>
 </body>
 </html>
