--- a/work.html
+++ b/work.html
@@ -4,75 +4,40 @@
     <title>Charles Reverand's Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/main.css"/>
-    <link rel="stylesheet" href="/css/halfScreen.css"/>
-    <link rel="stylesheet" href="/css/mobile.css"/>
 </head>
-<body>
-    <header>
-        <h1>Charles Reverand</h1>
-        <h2>RPI Class of 2024 // <span>Computer Science</span> and <span>Games and Simulation Arts and Sciences</span></h2>
-    </header>
-    <section class = "experienceSmall">
-        <a class = "homeBubble" href="index.html" alt = "Home">
-            <p>
-                Home
-            </p>
-        </a>
-        <a class = "workBubble" href="education.html" alt = "Education">
-            <p>
-                Education
-            </p>
-        </a>
-        <a class = "workBubble" href="projects.html" alt = "Personal Projects">
-        <p>
-            Personal Projects
-        </p>
-        </a>
-        <a class = "workBubble" href = "work.html" alt = "Work Experience">
-        <p>
-            Work Experience
-        </p>
-        </a>
-    </section>
-    <section id = "about">
-        <p>While I am still a student, I have held a few positions in the past. Here you can find some of them that relate to my field.</p>
-    </section>
-    <section class = "work">
-        <div>
-            <h3>Sterling Medical Devices</h3>
-            <div>
-                <div class="description">
-                    <p>Software Systems Engineer Intern</p>
-                    <p>May 2019 - June 2020</p>
-                    <p>Ended after original contract (1 year internship) ended w/ extension + starting College</p>
-                </div>
-                <div class="responsibilities">
-                    <p>Responsible for developing plugins and bugfixes for a widely used project management software on the front and backend. Also contributed to testing software before release.</p>
-                </div>
-            </div>
-        </div>
-        <div>
-            <h3>Code Ninjas</h3>
-            <div>
-                <div class="description">
-                    <p>Instructor/Code Sensei</p>
-                    <p>June 2019 - March 2021</p>
-                    <p>Ended due to moving + starting College</p>
-                </div>
-                <div class="responsibilities">
-                    <p>Taught kids how to code using Scratch, JavaScript, Lua, and more by using simple games. During the original outbreak of COVID-19, I transitioned to creating videos about P5JS for their YouTube channel before returning to in-person instruction.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <footer>
-        <p>Created by me! 2021</p>
-        <div>
+<body class = "darkBG">
+    <div class = "halfPage">
+        <div class = "links">
             <a href="https://www.github.com/talios0"><img src="/img/GitHub-Mark-Light-120px-plus.png" alt="Charles' Github"/></a>
             <a href="https://talios0.itch.io"><img src="/img/itchio-textless-white.svg" alt="Charles' Itch.io"/></a>
             <a href="https://www.twitter.com/talios0"><img src="/img/2021 Twitter logo - white.png" alt="Charles' Twitter"/></a>
             <a href="https://www.linkedin.com/in/charles-reverand-b64694187/"><img src="/img/LI-In-Bug.png" alt="Charles' LinkedIn"/></a>
         </div>
-    </footer>
+        <div class = "aboutMin">
+            <div class = "name">
+                <h1>Projects</h1>
+            </div>
+        </div>
+        <nav>
+            <a class = "button" href="index.html"><div>Home</div></a>
+            <a class = "button" href="projects.html"><div>Projects</div></a>
+            <a class = "button" href="work.html"><div>Work</div></a>
+            <a class = "button" href="education.html"><div>Education</div></a>
+        </nav>
+    </div>
+    <div class = "projects">
+        <div class = "item">
+            <span class = "itemTitle">Sterling Medical Devices</span>
+            <span class = "itemJob">Software Systems Engineer Intern</span>
+            <span class = "itemTime">May 2019 - June 2020</span>
+            <p class = "itemDetail">Responsible for developing plugins and bugfixes for a widely used project management software on the front and backend. Also contributed to testing software before release.</p>
+        </div>
+        <div class = "item">
+            <span class = "itemTitle">Code Ninjas</span>
+            <span class = "itemJob">Instructor/Code Sensei</span>
+            <span class = "itemTime">June 2019 - March 2021</span>
+            <p class = "itemDetail">Taught kids how to code using Scratch, JavaScript, Lua, and more by using simple games. During the original outbreak of COVID-19, I transitioned to creating videos about P5JS for their YouTube channel before returning to in-person instruction.</p>
+        </div>
+    </div>
 </body>
 </html>
