--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
         <p class = "itemDetail">An RCOS project where irl user-created characters are pitted in an RPI-themed fighting game with major-specific traits!</p>
         <ul>
             <li>Godot</li>
-            <li>View on GitHub</li>
+            <li>View on <a href = "https://www.github.com/Apexal/wrathskeller">GitHub</a></li>
         </ul>
     </div>
     <div class = "item">
@@ -42,7 +42,7 @@
         <p class = "itemDetail">An RCOS project that handles the creation and sending of user-created characters to Wrathspriter through the use of a progressive web app.</p>
         <ul>
             <li>NodeJS, ReactJS, TypeScript</li>
-            <li>View on GitHub</li>
+            <li>View on <a href = "https://www.github.com/Apexal/wrathspriter">GitHub</a></li>
         </ul>
     </div>
     <div class = "item">
@@ -51,7 +51,7 @@
         <p class = "itemDetail">Shows the release dates for English-dubbed anime in a graphical format. Utilizes the TeamUP REST and AniList APIs.</p>
         <ul>
             <li>NodeJS, Express, JS</li>
-            <li>View on GitHub</li>
+            <li>View on <a href = "https://www.github.com/talios0/Anime-Dub-Schedule">GitHub</a></li>
         </ul>
         <a class = "button" href = "https://talios.software">Go to Site</a>
     </div>
@@ -73,6 +73,7 @@
             <li>Unity3D, C#, Aseprite</li>
             <li>Overall Ranking: 22/81</li>
             <li>Theme Ranking: 9/81</li>
+            <li>View on <a href = "https://www.github.com/talios0/SantaSnowman">GitHub</a></li>
         </ul>
         <img src = "img/snowman/0.png"/>
         <a class = "button" href = "https://talios0.itch.io/christmas-of-the-snowmen">Play on Itch.io</a>
@@ -105,7 +106,7 @@
         <p class = "itemDetail">A recreation of the classic game of Puyo Puyo!</p>
         <ul>
             <li>P5JS, JS, Adobe Illustrator</li>
-            <li>View on GitHub</li>
+            <li>View on <a href = "https://www.github.com/talios0/puyojs">GitHub</a></li>
         </ul>
         <img src = "img/puyojs/0.png"/>
         <a class = "button" href = "https://talios0.itch.io/puyojs">Play on Itch.io</a>
@@ -116,7 +117,7 @@
         <p class = "itemDetail">Originally made for the Congressional App Challenge, Form2Role Bot is a Discord Bot that assigns roles based off of a Google Form submission. Originally created for my high school's Discord server to make it easy to talk to others in the same class.</p>
         <ul>
             <li>Discord.NET, C#, Google Sheets API</li>
-            <li>View on Github</li>
+            <li>View on <a href = "https://www.github.com/talios0/Form2RoleBot">GitHub</a></li>
         </ul>
     </div>
     <div class = "item">
@@ -125,7 +126,7 @@
         <p class = "itemDetail">Created for Ludum Dare 46 in three days. Manipulate the entire level to get a ball to the objective.</p>
         <ul>
             <li>Unity3D, C#</li>
-            <li>View on GitHub</li>
+            <li>View on <a href = "https://www.github.com/talios0/Laser-Evaders">GitHub</a></li>
         </ul>
         <img src = "img/laser/0.png"/>
         <a class = "button" href = "https://talios0.itch.io/laser-evaders">Play on Itch.io</a>
