--- a/work.html
+++ b/work.html
@@ -15,7 +15,7 @@
         </div>
         <div class = "aboutMin">
             <div class = "name">
-                <h1>Projects</h1>
+                <h1>Work</h1>
             </div>
         </div>
         <nav>
