Added Education + Styling

--- a/projects.html
+++ b/projects.html
@@ -28,15 +28,7 @@
 </div>
 <div class = "projects">
     <div class = "item">
-        <span class = "itemTitle">Wrathskeller</span>
-        <span class="itemTime">Winter & Spring 2022</span>
-        <p class = "itemDetail">An RCOS project where irl user-created characters are pitted in an RPI-themed fighting game with major-specific traits!</p>
-        <ul>
-            <li>Godot</li>
-            <li>View on <a href = "https://www.github.com/Apexal/wrathskeller">GitHub</a></li>
-        </ul>
-    </div>
-    <div class = "item">
+        <div class = "itemType"><span>RCOS</span></div>
         <span class = "itemTitle">Wrathspriter</span>
         <span class="itemTime">Winter & Spring 2022</span>
         <p class = "itemDetail">An RCOS project that handles the creation and sending of user-created characters to Wrathspriter through the use of a progressive web app.</p>
@@ -44,6 +36,16 @@
             <li>NodeJS, ReactJS, TypeScript</li>
             <li>View on <a href = "https://www.github.com/Apexal/wrathspriter">GitHub</a></li>
         </ul>
+    </div>
+    <div class = "item">
+        <div class = "itemType"><span>Game Development II</span></div>
+        <span class = "itemTitle">Steal Yourself</span>
+        <span class="itemTime">Spring 2022</span>
+        <p class = "itemDetail">An up and coming Roguelite made in Unity over an entire school semester. Programmer and Scrum Master. Core responsibilities include Enemy AI and Weapon Systems.</p>
+        <ul>
+            <li>Unity, Perforce, C#</li>
+        </ul>
+        <a class = "button" href="https://twitter.com/lunartunastudio">Progress on Twitter</a>
     </div>
     <div class = "item">
         <span class = "itemTitle">Anime Schedule</span>
@@ -56,9 +58,21 @@
         <a class = "button" href = "https://talios.software">Go to Site</a>
     </div>
     <div class = "item">
+        <span class = "itemTitle">Heart of the Cards</span>
+        <span class = "itemTime">Summer 2021</span>
+        <p class = "itemDetail">Created for the So Bad It's Good Game Jame with 3 others. I was the project leader and primary programmer.</p>
+        <ul>
+            <li>Unity3D, C#</li>
+            <li>Overall Ranking: 18/40</li>
+            <li>Overall Good: 8/40</li>
+        </ul>
+        <img src = "img/hotc/0.png"/>
+        <a class = "button" href = "https://talios0.itch.io/heart-of-the-cards">Play on Itch.io</a>
+    </div>
+    <div class = "item">
         <span class = "itemTitle">Catan-Like Discord Game</span>
         <span class="itemTime">Summer 2021 - Present</span>
-        <p class = "itemDetail">A WIP Discord Bot that recreates Catan, playable directly through a Discord Server's chat room. Keeps track of game progess and allow multiple concurrent games.</p>
+        <p class = "itemDetail">A WIP Discord Bot that recreates Catan, playable directly through a Discord Server's chat room. Keeps track of game progess and allows for multiple concurrent games.</p>
         <ul>
             <li>Discord.JS, NodeJS, MongoDB, JS</li>
             <li>Estimated Progress: 72%</li>
@@ -79,16 +93,44 @@
         <a class = "button" href = "https://talios0.itch.io/christmas-of-the-snowmen">Play on Itch.io</a>
     </div>
     <div class = "item">
-        <span class = "itemTitle">Heart of the Cards</span>
-        <span class = "itemTime">Summer 2021</span>
-        <p class = "itemDetail">Created for the So Bad It's Good Game Jame with 3 others. I was the project leader and primary programmer.</p>
+        <div class = "itemType"><span>RCOS</span></div>
+        <span class = "itemTitle">Wrathskeller</span>
+        <span class="itemTime">Winter & Spring 2022</span>
+        <p class = "itemDetail">An RCOS project where irl user-created characters are pitted in an RPI-themed fighting game with major-specific traits!</p>
         <ul>
-            <li>Unity3D, C#</li>
-            <li>Overall Ranking: 18/40</li>
-            <li>Overall Good: 8/40</li>
+            <li>Godot</li>
+            <li>View on <a href = "https://www.github.com/Apexal/wrathskeller">GitHub</a></li>
         </ul>
-        <img src = "img/hotc/0.png"/>
-        <a class = "button" href = "https://talios0.itch.io/heart-of-the-cards">Play on Itch.io</a>
+    </div>
+    <div class = "item">
+        <div class = "itemType"><span>Game Development I</span></div>
+        <span class = "itemTitle">The Keeper</span>
+        <span class = "itemTime">Fall 2021</span>
+        <p class = "itemDetail">A three-week project in Unreal Engine where you battle your inner-self, portrayed as a library of knowledge. Roles: Programming and Shaders</p>
+        <ul>
+            <li>C++, Unreal Engine</li>
+        </ul>
+        <img src = "img/library/0.png"/>
+    </div>
+    <div class = "item">
+        <div class = "itemType"><span>Game Development I</span></div>
+        <span class = "itemTitle">Heist</span>
+        <span class = "itemTime">Fall 2021</span>
+        <p class = "itemDetail">A three-week project in Unity where you need to infiltrate a museuem and steal precious artifacts without being caught! Roles: Programming and Character Models/Animations</p>
+        <ul>
+            <li>C++, Unreal Engine, Blender</li>
+        </ul>
+        <img src = "img/stealth/0.png"/>
+    </div>
+    <div class = "item">
+        <div class = "itemType"><span>Game Development I</span></div>
+        <span class = "itemTitle">Hamster Line Trip</span>
+        <span class = "itemTime">Fall 2021</span>
+        <p class = "itemDetail">A three-week project in Godot. A hamster is their way down a building, but the player needs to help by filling in gaps and drawing paths! Roles: Programming</p>
+        <ul>
+            <li>Godot, GDScript</li>
+        </ul>
+        <img src = "img/hamster/0.png"/>
     </div>
     <div class = "item">
         <span class = "itemTitle">Bus Occupancy Tracker Demo</span>
