--- a/education.html
+++ b/education.html
@@ -3,109 +3,62 @@
 <head>
     <title>Charles Reverand's Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/css/fonts.css"/>
-    <link rel="stylesheet" href="/css/main-old.css"/>
-    <link rel="stylesheet" href="/css/halfScreen.css"/>
-    <link rel="stylesheet" href="/css/mobile.css"/>
+    <link rel="stylesheet" href="/css/main.css"/>
 </head>
-<body>
-    <header>
-        <h1>Charles Reverand</h1>
-        <h2>RPI Class of 2024 // <span>Computer Science</span> and <span>Games and Simulation Arts and Sciences</span></h2>
-    </header>
-    <section class = "experienceSmall">
-        <a class = "homeBubble" href="index.html" alt = "Home">
-            <p>
-                Home
-            </p>
-        </a>
-        <a class = "workBubble" href="education.html" alt = "Education">
-            <p>
-                Education
-            </p>
-        </a>
-        <a class = "workBubble" href="projects.html" alt = "Personal Projects">
-        <p>
-            Personal Projects
-        </p>
-        </a>
-        <a class = "workBubble" href = "work.html" alt = "Work Experience">
-        <p>
-            Work Experience
-        </p>
-        </a>
-    </section>
-    <section id = "about">
-        <p>I currently attend Rennselaer Polytechnic Institute as a Computer Science (CSCI) major with a dual major in Games and Simulation Arts and Sciences (GSAS). As of Spring 2022, I am a Sophmore by year and a Junior by credits.</p>
-    </section>
-    <section class = "education">
-        <div>
-            <h3>Rennselaer Polytechnic Institute</h3>
-            <div>
-                <div class="description">
-                    <p>Computer Science + GSAS</p>
-                    <p>GPA: 3.64/4.00</p>
-                    <p>Class of 2024 (Junior by Credits)</p>
-                </div>
-                <div class="info">
-                    <h4>Relevant Coursework</h4>
-                    <div>
-                        <p>Data Structures (CSCI-1200)</p>
-                    </div>
-                    <div>
-                        <p>Computer Organization (CSCI-2500)</p>
-                    </div>
-                    <div>
-                        <p>Foundations of Computer Science (CSCI-2200)</p>
-                    </div>
-                    <div>
-                        <p>Introduction to Algorithms (CSCI-2300)</p>
-                    </div>
-                    <div class="inprogress">
-                        <p>Operating Systems (CSCI-4210) [IN PROGRESS]</p>
-                    </div>
-                    <div class="inprogress">
-                        <p>Rennselaer Center for Open Source [RCOS] (CSCI-2961) [IN PROGRESS]</p>
-                    </div>
-                    <div>
-                        <p>Game Development I (GSAS-4520)</p>
-                    </div>
-                    <div>
-                        <p>Intro to Game Design (GSAS-1200)</p>
-                    </div>
-                    <div class="inprogress">
-                        <p>Game Development II (GSAS-4540) [IN PROGRESS]</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div>
-            <h3>Bergen County Technical High School - Teterboro, NJ</h3>
-            <div>
-                <div class="description">
-                    <p>Computer Science</p>
-                    <p>GPA: 3.89/4.00</p>
-                    <p>Class of 2020</p>
-                </div>
-                <div class = "info">
-                    <h4>Relevant Coursework</h4>
-                    <div><p>AP Physics C</p></div>
-                    <div><p>Waves and Modern Physics</p></div>
-                    <div><p>AP Computer Science Principles</p></div>
-                    <div><p>Game Devlopment Club</p></div>
-                </div>
-            </div>
-        </div>
-        
-    </section>
-    <footer>
-        <p>Created by me! 2021</p>
-        <div>
+<body class = "darkBG">
+    <div class = "halfPage">
+        <div class = "links">
             <a href="https://www.github.com/talios0"><img src="/img/GitHub-Mark-Light-120px-plus.png" alt="Charles' Github"/></a>
             <a href="https://talios0.itch.io"><img src="/img/itchio-textless-white.svg" alt="Charles' Itch.io"/></a>
             <a href="https://www.twitter.com/talios0"><img src="/img/2021 Twitter logo - white.png" alt="Charles' Twitter"/></a>
             <a href="https://www.linkedin.com/in/charles-reverand-b64694187/"><img src="/img/LI-In-Bug.png" alt="Charles' LinkedIn"/></a>
         </div>
-    </footer>
+        <div class = "aboutMin">
+            <div class = "name">
+                <h1>Education</h1>
+            </div>
+        </div>
+        <nav>
+            <a class = "button" href="index.html"><div>Home</div></a>
+            <a class = "button" href="projects.html"><div>Projects</div></a>
+            <a class = "button" href="work.html"><div>Work</div></a>
+            <a class = "button" href="education.html"><div>Education</div></a>
+        </nav>
+    </div>
+    <div class = "projects">
+        <div class = "item">
+            <span class = "itemTitle">Rensselaer Polytechnic Institute</span>
+            <span class = "itemTime">Fall 2020 - Fall 2023 (Estimated)</span>
+            <span class = "itemJob">Computer Science + GSAS</span>
+            <span class = "itemJob">GPA: 3.64/4.0</span>
+            <span class = "itemSection">Relevant Coursework</span>
+            <ul>
+                <li>Rensselaer Center for Open Source (RCOS) [CSCI-2961]</li>
+                <li>Game Development II [GSAS-4540]</li>
+                <li>Intro to Game Design [GSAS-1200]</li>
+                <li>Operating Systems [CSCI-4210]</li>
+                <li>Data Structures [CSCI-1200]</li>
+                <li>Intro to Algorithms [CSCI-2300]</li>
+                <li>Foundations of Computer Science [CSCI-2200]</li>
+                <li>Computer Organization [CSCI-2500]</li>
+            </ul>
+        </div>
+        <div class = "item">
+            <span class = "itemTitle">Bergen County Technical High School</span>
+            <span class = "itemTime">Fall 2016 - Spring 2020</span>
+            <span class = "itemJob">Computer Science</span>
+            <span class = "itemJob">GPA: 3.89/4.0</span>
+            <span class = "itemSection">Relevant Coursework</span>
+            <ul>
+                <li>AP Physics C</li>
+                <li>Waves and Modern Physics</li>
+                <li>AP Computer Science Principles</li>
+            </ul>
+            <span class = "itemSection">Relevant Activities</span>
+            <ul>
+                <li>Founder/Leader of the Game Development Club</li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
