--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,7 @@
     <div class = "item">
         <span class = "itemTitle">Anime Schedule</span>
         <span class="itemTime">February 2022 - Present</span>
-        <p class = "itemDetail">Shows the release dates for English-dubbed anime in a graphical format. Utilizes the TeamUP REST and AniList APIs.</p>
+        <p class = "itemDetail">Shows the release dates for English-dubbed anime in a graphical format. Utilizes the TeamUp and AniList APIs.</p>
         <ul>
             <li>NodeJS, Express, JS</li>
             <li>View on <a href = "https://www.github.com/talios0/Anime-Dub-Schedule">GitHub</a></li>
