Updated Project Types

--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
 </div>
 <div class = "projects">
     <div class = "item">
-        <div class = "itemType"><span>RCOS</span></div>
+        <div class = "itemType"><div><span>RCOS</span></div></div>
         <span class = "itemTitle">Wrathspriter</span>
         <span class="itemTime">Winter & Spring 2022</span>
         <p class = "itemDetail">An RCOS project that handles the creation and sending of user-created characters to Wrathspriter through the use of a progressive web app.</p>
@@ -38,7 +38,7 @@
         </ul>
     </div>
     <div class = "item">
-        <div class = "itemType"><span>Game Development II</span></div>
+        <div class = "itemType"><div><span>Game Development II</span></div></div>
         <span class = "itemTitle">Steal Yourself</span>
         <span class="itemTime">Spring 2022</span>
         <p class = "itemDetail">An up and coming Roguelite made in Unity over an entire school semester. Programmer and Scrum Master. Core responsibilities include Enemy AI and Weapon Systems.</p>
@@ -48,6 +48,7 @@
         <a class = "button" href="https://twitter.com/lunartunastudio">Progress on Twitter</a>
     </div>
     <div class = "item">
+        <div class = "itemType"><div><span>Personal</span></div></div>
         <span class = "itemTitle">Anime Schedule</span>
         <span class="itemTime">February 2022 - Present</span>
         <p class = "itemDetail">Shows the release dates for English-dubbed anime in a graphical format. Utilizes the TeamUp and AniList APIs.</p>
@@ -58,6 +59,7 @@
         <a class = "button" href = "https://talios.software">Go to Site</a>
     </div>
     <div class = "item">
+        <div class = "itemType"><div><span>Game Jam</span></div></div>
         <span class = "itemTitle">Heart of the Cards</span>
         <span class = "itemTime">Summer 2021</span>
         <p class = "itemDetail">Created for the So Bad It's Good Game Jame with 3 others. I was the project leader and primary programmer.</p>
@@ -70,6 +72,7 @@
         <a class = "button" href = "https://talios0.itch.io/heart-of-the-cards">Play on Itch.io</a>
     </div>
     <div class = "item">
+        <div class = "itemType"><div><span>Personal</span></div></div>
         <span class = "itemTitle">Catan-Like Discord Game</span>
         <span class="itemTime">Summer 2021 - Present</span>
         <p class = "itemDetail">A WIP Discord Bot that recreates Catan, playable directly through a Discord Server's chat room. Keeps track of game progess and allows for multiple concurrent games.</p>
@@ -80,6 +83,7 @@
         <img src = "img/catan/0.png"/>
     </div>
     <div class = "item">
+        <div class = "itemType"><div><span>Game Jam</span></div></div>
         <span class = "itemTitle">Christmas of the Snowmen</span>
         <span class = "itemTime">December 2021</span>
         <p class = "itemDetail">Programmer, Designer, and Artist for this game about a Christmas Tree saving Christmas for the Jame Gam Christmas Edition in 1.5 days.</p>
@@ -93,7 +97,7 @@
         <a class = "button" href = "https://talios0.itch.io/christmas-of-the-snowmen">Play on Itch.io</a>
     </div>
     <div class = "item">
-        <div class = "itemType"><span>RCOS</span></div>
+        <div class = "itemType"><div><span>RCOS</span></div></div>
         <span class = "itemTitle">Wrathskeller</span>
         <span class="itemTime">Winter & Spring 2022</span>
         <p class = "itemDetail">An RCOS project where irl user-created characters are pitted in an RPI-themed fighting game with major-specific traits!</p>
@@ -103,7 +107,7 @@
         </ul>
     </div>
     <div class = "item">
-        <div class = "itemType"><span>Game Development I</span></div>
+        <div class = "itemType"><div><span>Game Development I</span></div></div>
         <span class = "itemTitle">The Keeper</span>
         <span class = "itemTime">Fall 2021</span>
         <p class = "itemDetail">A three-week project in Unreal Engine where you battle your inner-self, portrayed as a library of knowledge. Roles: Programming and Shaders</p>
@@ -113,7 +117,7 @@
         <img src = "img/library/0.png"/>
     </div>
     <div class = "item">
-        <div class = "itemType"><span>Game Development I</span></div>
+        <div class = "itemType"><div><span>Game Development I</span></div></div>
         <span class = "itemTitle">Heist</span>
         <span class = "itemTime">Fall 2021</span>
         <p class = "itemDetail">A three-week project in Unity where you need to infiltrate a museuem and steal precious artifacts without being caught! Roles: Programming and Character Models/Animations</p>
@@ -123,7 +127,7 @@
         <img src = "img/stealth/0.png"/>
     </div>
     <div class = "item">
-        <div class = "itemType"><span>Game Development I</span></div>
+        <div class = "itemType"><div><span>Game Development I</span></div></div>
         <span class = "itemTitle">Hamster Line Trip</span>
         <span class = "itemTime">Fall 2021</span>
         <p class = "itemDetail">A three-week project in Godot. A hamster is their way down a building, but the player needs to help by filling in gaps and drawing paths! Roles: Programming</p>
@@ -133,6 +137,7 @@
         <img src = "img/hamster/0.png"/>
     </div>
     <div class = "item">
+        <div class = "itemType"><div><span>Hackathon</span></div></div>
         <span class = "itemTitle">Bus Occupancy Tracker Demo</span>
         <span class = "itemTime">Fall 2019</span>
         <p class = "itemDetail">Made for the HackRPI pre-hackathon event in a few hours. Featured the ability to see a bus, it's occupants, the next stop, and current restrictions.</p>
@@ -143,6 +148,7 @@
         </ul>
     </div>
     <div class = "item">
+        <div class = "itemType"><div><span>Personal</span></div></div>
         <span class = "itemTitle">PuyoJS</span>
         <span class = "itemTime">Summer 2019</span>
         <p class = "itemDetail">A recreation of the classic game of Puyo Puyo!</p>
@@ -154,6 +160,7 @@
         <a class = "button" href = "https://talios0.itch.io/puyojs">Play on Itch.io</a>
     </div>
     <div class = "item">
+        <div class = "itemType"><div><span>Competition/Personal</span></div></div>
         <span class = "itemTitle">Form2Role Bot</span>
         <span class = "itemTime">Fall 2018</span>
         <p class = "itemDetail">Originally made for the Congressional App Challenge, Form2Role Bot is a Discord Bot that assigns roles based off of a Google Form submission. Originally created for my high school's Discord server to make it easy to talk to others in the same class.</p>
@@ -163,6 +170,7 @@
         </ul>
     </div>
     <div class = "item">
+        <div class = "itemType"><div><span>Game Jam</span></div></div>
         <span class = "itemTitle">Laser Evaders</span>
         <span class = "itemTime">April 2020</span>
         <p class = "itemDetail">Created for Ludum Dare 46 in three days. Manipulate the entire level to get a ball to the objective.</p>
@@ -174,14 +182,17 @@
         <a class = "button" href = "https://talios0.itch.io/laser-evaders">Play on Itch.io</a>
     </div>
     <div class = "item">
+        <div class = "itemType"><div><span>Game Jam</span></div></div>
         <span class = "itemTitle">Ludum Dare 43</span>
         <span class = "itemTime">December 2018</span>
     </div>
     <div class = "item">
+        <div class = "itemType"><div><span>Game Jam</span></div></div>
         <span class = "itemTitle">Ludum Dare 40</span>
         <span class = "itemTime">December 2017</span>
     </div>
     <div class = "item">
+        <div class = "itemType"><div><span>Hackathon</span></div></div>
         <span class = "itemTitle">HackBCA Hackathon</span>
         <span class = "itemTime">March 2017</span>
     </div>
