Updated mobile style

--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/fonts.css"/>
     <link rel="stylesheet" href="/css/main.css"/>
+    <link rel="stylesheet" href="/css/mobile.css"/>
 </head>
 <body class = "darkBG">
 <div class = "halfPage">
@@ -19,7 +20,7 @@
             <h1>Projects</h1>
         </div>
     </div>
-    <nav>
+    <nav class = "pageNav">
         <a class = "button" href="index.html"><div>Home</div></a>
         <a class = "button" href="projects.html"><div>Projects</div></a>
         <a class = "button" href="work.html"><div>Work</div></a>
