--- a/work.html
+++ b/work.html
@@ -4,6 +4,7 @@
     <title>Charles Reverand's Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/main.css"/>
+    <link rel="stylesheet" href="/css/mobile.css"/>
 </head>
 <body class = "darkBG">
     <div class = "halfPage">
