--- a/projects.html
+++ b/projects.html
@@ -46,7 +46,7 @@
         <ul>
             <li>Unity, Perforce, C#</li>
         </ul>
-        <a class = "button" href="https://twitter.com/lunartunastudio">Progress on Twitter</a>
+        <a class = "button" href="https://lunar-tuna-studios.itch.io/steal-yourself">Demo on Itch.io</a>
     </div>
     <div class = "item">
         <div class = "itemType"><div><span>Personal</span></div></div>
@@ -106,96 +106,6 @@
             <li>Godot</li>
             <li>View on <a href = "https://www.github.com/Apexal/wrathskeller">GitHub</a></li>
         </ul>
-    </div>
-    <div class = "item">
-        <div class = "itemType"><div><span>Game Development I</span></div></div>
-        <span class = "itemTitle">The Keeper</span>
-        <span class = "itemTime">Fall 2021</span>
-        <p class = "itemDetail">A three-week project in Unreal Engine where you battle your inner-self, portrayed as a library of knowledge. Roles: Programming and Shaders</p>
-        <ul>
-            <li>C++, Unreal Engine</li>
-        </ul>
-        <img src = "img/library/0.png"/>
-    </div>
-    <div class = "item">
-        <div class = "itemType"><div><span>Game Development I</span></div></div>
-        <span class = "itemTitle">Heist</span>
-        <span class = "itemTime">Fall 2021</span>
-        <p class = "itemDetail">A three-week project in Unity where you need to infiltrate a museuem and steal precious artifacts without being caught! Roles: Programming and Character Models/Animations</p>
-        <ul>
-            <li>C++, Unreal Engine, Blender</li>
-        </ul>
-        <img src = "img/stealth/0.png"/>
-    </div>
-    <div class = "item">
-        <div class = "itemType"><div><span>Game Development I</span></div></div>
-        <span class = "itemTitle">Hamster Line Trip</span>
-        <span class = "itemTime">Fall 2021</span>
-        <p class = "itemDetail">A three-week project in Godot. A hamster is their way down a building, but the player needs to help by filling in gaps and drawing paths! Roles: Programming</p>
-        <ul>
-            <li>Godot, GDScript</li>
-        </ul>
-        <img src = "img/hamster/0.png"/>
-    </div>
-    <div class = "item">
-        <div class = "itemType"><div><span>Hackathon</span></div></div>
-        <span class = "itemTitle">Bus Occupancy Tracker Demo</span>
-        <span class = "itemTime">Fall 2019</span>
-        <p class = "itemDetail">Made for the HackRPI pre-hackathon event in a few hours. Featured the ability to see a bus, it's occupants, the next stop, and current restrictions.</p>
-        <ul>
-            <li>AngularJS</li>
-            <li>Placement: 2</li>
-            <li>View on GitHub</li>
-        </ul>
-    </div>
-    <div class = "item">
-        <div class = "itemType"><div><span>Personal</span></div></div>
-        <span class = "itemTitle">PuyoJS</span>
-        <span class = "itemTime">Summer 2019</span>
-        <p class = "itemDetail">A recreation of the classic game of Puyo Puyo!</p>
-        <ul>
-            <li>P5JS, JS, Adobe Illustrator</li>
-            <li>View on <a href = "https://www.github.com/talios0/puyojs">GitHub</a></li>
-        </ul>
-        <img src = "img/puyojs/0.png"/>
-        <a class = "button" href = "https://talios0.itch.io/puyojs">Play on Itch.io</a>
-    </div>
-    <div class = "item">
-        <div class = "itemType"><div><span>Competition/Personal</span></div></div>
-        <span class = "itemTitle">Form2Role Bot</span>
-        <span class = "itemTime">Fall 2018</span>
-        <p class = "itemDetail">Originally made for the Congressional App Challenge, Form2Role Bot is a Discord Bot that assigns roles based off of a Google Form submission. Originally created for my high school's Discord server to make it easy to talk to others in the same class.</p>
-        <ul>
-            <li>Discord.NET, C#, Google Sheets API</li>
-            <li>View on <a href = "https://www.github.com/talios0/Form2RoleBot">GitHub</a></li>
-        </ul>
-    </div>
-    <div class = "item">
-        <div class = "itemType"><div><span>Game Jam</span></div></div>
-        <span class = "itemTitle">Laser Evaders</span>
-        <span class = "itemTime">April 2020</span>
-        <p class = "itemDetail">Created for Ludum Dare 46 in three days. Manipulate the entire level to get a ball to the objective.</p>
-        <ul>
-            <li>Unity3D, C#</li>
-            <li>View on <a href = "https://www.github.com/talios0/Laser-Evaders">GitHub</a></li>
-        </ul>
-        <img src = "img/laser/0.png"/>
-        <a class = "button" href = "https://talios0.itch.io/laser-evaders">Play on Itch.io</a>
-    </div>
-    <div class = "item">
-        <div class = "itemType"><div><span>Game Jam</span></div></div>
-        <span class = "itemTitle">Ludum Dare 43</span>
-        <span class = "itemTime">December 2018</span>
-    </div>
-    <div class = "item">
-        <div class = "itemType"><div><span>Game Jam</span></div></div>
-        <span class = "itemTitle">Ludum Dare 40</span>
-        <span class = "itemTime">December 2017</span>
-    </div>
-    <div class = "item">
-        <div class = "itemType"><div><span>Hackathon</span></div></div>
-        <span class = "itemTitle">HackBCA Hackathon</span>
-        <span class = "itemTime">March 2017</span>
     </div>
 </div>
 </body>
