--- a/projects.html
+++ b/projects.html
@@ -99,12 +99,14 @@
     </div>
     <div class = "item">
         <div class = "itemType"><div><span>RCOS</span></div></div>
-        <span class = "itemTitle">Wrathskeller</span>
+        <span class = "itemTitle">Wrathskeller, Wrathpriter, & Wrathserver</span>
         <span class="itemTime">Winter & Spring 2022</span>
         <p class = "itemDetail">An RCOS project where irl user-created characters are pitted in an RPI-themed fighting game with major-specific traits!</p>
         <ul>
             <li>Godot</li>
-            <li>View on <a href = "https://www.github.com/Apexal/wrathskeller">GitHub</a></li>
+            <li>View on <a href = "https://www.github.com/Apexal/wrathskeller">Wrathskeller GitHub</a></li>
+            <li>View on <a href = "https://www.github.com/Apexal/wrathspriter">Wrathspriter GitHub</a></li>
+            <li>View on <a href = "https://www.github.com/Apexal/wrathserver">Wrathserver GitHub</a></li>
         </ul>
     </div>
 </div>
